...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--New Receipt-->
        <scene sceneID="k3R-te-y9k">
            <objects>
                <viewController id="ejS-xn-Qsi" customClass="NewReceiptFormViewController" customModule="Receipts" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="PXH-Nj-PGr"/>
                        <viewControllerLayoutGuide type="bottom" id="3zZ-R2-KLj"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="kge-8G-NrR">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                            <constraint firstItem="OZ1-hf-mtO" firstAttribute="leading" secondItem="e02-kj-kbf" secondAttribute="trailing" constant="8" id="nFT-IS-yzc"/>
                            <constraint firstItem="CNY-Je-CMl" firstAttribute="leading" secondItem="WQY-eF-gX8" secondAttribute="leadingMargin" id="uPD-PP-fQC"/>
                            <constraint firstItem="CNY-Je-CMl" firstAttribute="top" secondItem="rQX-9b-8Ra" secondAttribute="bottom" constant="8" id="wPh-Wf-f3e"/>
                            <constraint firstItem="6EU-YV-CEx" firstAttribute="width" secondItem="e02-kj-kbf" secondAttribute="width" id="xLS-FB-u77"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Detail" id="qj2-UO-F6E">
                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="F2D-i6-hLb">
                            <connections>
                                <segue destination="1MN-1V-BS8" kind="presentation" identifier="showEditForm" id="vr0-t7-8fy"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
